kubernetes-minikube/pricePointScout-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-point-scout
  namespace: pps-namespace
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: price-point-scout
  template:
    metadata:
      labels:
        app: price-point-scout
    spec:
      restartPolicy: Always
      containers:
      - name: server
        image: omarzakaria10/price-point-scout:0f99c4d2e2992da734b5f2c6aa94e401ec1a9355
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "500Mi"
            cpu: "800m"
          limits:
            memory: "800Mi"
            cpu: "1600m"
---
apiVersion: v1
kind: Service
metadata:
  name: price-point-scout-service  # Changed name to match ingress backend
  namespace: pps-namespace
spec:
  type: ClusterIP  # Changed from LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: price-point-scout
